# anychunker

./: README.md  examples.ipynb  pyproject.toml  requirements.txt
anychunker/: __init__.py  base.py  blocks.py  code.py  markdown.py  schemas.py  semantics.py  sentence.py  text.py
skills/anychunker-skills/: SKILL.md  SKILL_zh.md
skills/anychunker-skills/references/: api-reference.md  recipes.md
skills/anychunker-skills/scripts/: quick_demo.py  verify_install.py
