[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anychunker"
version = "1.0.0"
description = "Split any text for LLM or RAG or Agent. - text, semantics, token, markdown, code language, custom, etc."
readme = "README.md"
authors = [
    {name = "AnyForge"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "pydantic",
    "transformers"
]

[project.urls]
Homepage = "https://github.com/anyforge/anychunker"
Repository = "https://github.com/anyforge/anychunker.git"
Issues = "https://github.com/anyforge/anychunker/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["anychunker*"]