[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anychunker"
dynamic = ["version"]
license = {text = "MIT"}
description = "Split any text for LLM or RAG or Agent.Specially supports block-based splitting, keeping Markdown elements intact."
readme = "README.md"
requires-python = ">=3.7"
keywords = [
    "LLm",
    "RAG",
    "chunker",
    "block"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.21.6",
    "pydantic",
    "transformers",
]


[project.urls]
homepage = "https://github.com/anyforge/anychunker"
repository = "https://github.com/anyforge/anychunker"


[tool.setuptools.dynamic]
version = { attr = "anychunker.__version__.version" }

[tool.setuptools.packages.find]
include = ["anychunker*"]
namespaces = false

[tool.setuptools]
zip-safe = false
